Fixes modal to remove scroll bars when modal is visible, fixes #787

--- a/src/definitions/modules/dimmer.less
+++ b/src/definitions/modules/dimmer.less
@@ -108,9 +108,11 @@
   transform-origin: center center;
 }
 
-.ui.scrolling.dimmable > .dimmer,
-.ui.scrolling.page.dimmer {
-  position: absolute;
+body.ui.dimmed.dimmable {
+  overflow: hidden;
+}
+body.ui.dimmable > .dimmer {
+  position: fixed;
 }
 
 body.ui.dimmed.dimmable > :not(.dimmer){
